--- a/package.json
+++ b/package.json
@@ -3,16 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.47",
     "@types/react": "^16.9.38",
+    "@types/react-csv": "^1.1.1",
+    "@types/react-data-grid": "^4.0.5",
+    "@types/react-datepicker": "^3.0.2",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/react-table": "^7.0.19",
+    "@types/styled-components": "^5.1.0",
+    "axios": "^0.19.2",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
+    "react-csv": "^2.0.3",
+    "react-data-grid": "^7.0.0-canary.16",
+    "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-table": "^7.2.1",
+    "styled-components": "^5.1.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
